--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sabor Toon</title>
+  <link rel="icon" type="image/png" href="images/icone.png">
 
-  <!-- Fontes -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap"
+    rel="stylesheet">
 
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- CSS personalizado -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <!-- NAVBAR -->
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Sabor Toon</a>
@@ -33,7 +34,6 @@
     </div>
   </nav>
 
-  <!-- HEADER -->
   <header id="home" class="text-center py-5 bg-light">
     <div class="container">
       <h1 class="display-5 fw-bold">Sabor Toon</h1>
@@ -42,23 +42,22 @@
     </div>
   </header>
 
-  <!-- SOBRE -->
   <section id="informacoes" class="py-5 text-center">
     <div class="container">
       <h2>Sobre o Projeto</h2>
       <p class="fs-5">
-        Inspirado nas comidas mais icônicas dos desenhos e animes, o Cozinha Animada traz um pedacinho do mundo da fantasia para a sua mesa.
+        Inspirado nas comidas mais icônicas dos desenhos e animes, o Sabor Toon traz um pedacinho do mundo da fantasia
+        para a sua mesa.
         Cada receita é uma homenagem ao sabor e à imaginação.
       </p>
     </div>
   </section>
 
-  <!-- RECEITAS COM CARDS -->
   <section id="receitas" class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center mb-5">Receitas em Destaque</h2>
       <div class="row g-4">
-        <!-- Card 1 -->
+
         <div class="col-md-4">
           <div class="card-receita">
             <img src="images/ramen_naruto.jpg" alt="Ramen Naruto">
@@ -69,7 +68,7 @@
             </div>
           </div>
         </div>
-        <!-- Card 2 -->
+
         <div class="col-md-4">
           <div class="card-receita">
             <img src="images/dorayaki_doraemon.jpg" alt="Dorayaki Doraemon">
@@ -80,7 +79,7 @@
             </div>
           </div>
         </div>
-        <!-- Card 3 -->
+
         <div class="col-md-4">
           <div class="card-receita">
             <img src="images/amendoim_ticoeteco.jpg" alt="Amendoim Tico e Teco">
@@ -91,10 +90,10 @@
             </div>
           </div>
         </div>
-        <!-- Card 4 -->
+
         <div class="col-md-4">
           <div class="card-receita">
-            <img src="images/pooh_pancakes.jpg" alt="Panquecas do Pooh">
+            <img src="images/panquecas_pooh.jpg" alt="Panquecas do Pooh">
             <div class="conteudo-card">
               <h3>Panquecas do Ursinho Pooh</h3>
               <p>Fofinhas e douradas, cobertas com mel — o lanche favorito do Pooh!</p>
@@ -102,7 +101,7 @@
             </div>
           </div>
         </div>
-        <!-- Card 5 -->
+
         <div class="col-md-4">
           <div class="card-receita">
             <img src="images/onigiri_anime.jpg" alt="Onigiri Japonês">
@@ -117,19 +116,19 @@
     </div>
   </section>
 
-  <!-- GALERIA -->
   <section id="galeria" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">Galeria</h2>
       <div class="row g-4">
         <div class="col-md-4"><img src="images/ramen_naruto.jpg" class="img-fluid rounded shadow-sm" alt="Ramen"></div>
-        <div class="col-md-4"><img src="images/dorayaki_doraemon.jpg" class="img-fluid rounded shadow-sm" alt="Dorayaki"></div>
-        <div class="col-md-4"><img src="images/amendoim_ticoeteco.jpg" class="img-fluid rounded shadow-sm" alt="Amendoim"></div>
+        <div class="col-md-4"><img src="images/dorayaki_doraemon.jpg" class="img-fluid rounded shadow-sm"
+            alt="Dorayaki"></div>
+        <div class="col-md-4"><img src="images/amendoim_ticoeteco.jpg" class="img-fluid rounded shadow-sm"
+            alt="Amendoim"></div>
       </div>
     </div>
   </section>
 
-  <!-- RODAPÉ -->
   <footer class="py-4 text-white text-center">
     <p class="mb-1">© 2025 Sabor Toon</p>
     <p class="small">Site desenvolvido para Atividade Final de DSA1</p>
@@ -139,6 +138,7 @@
     <p class="small"> Yasmin Louzeiro, 37</p>
   </footer>
 
-  <script>document.addEventListener('DOMContentLoaded',()=>{console.log('Site Carregado');})</script>
+  <script>document.addEventListener('DOMContentLoaded', () => { console.log('Site Carregado'); })</script>
 </body>
+
 </html>
