--- a/receitas.html
+++ b/receitas.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Receitas - Sabor Toon</title>
   <link rel="icon" type="image/png" href="images/icone.png">
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -257,8 +257,12 @@
   </section>
 
   <footer class="py-4 text-white text-center">
-    <p class="mb-1">© 2025 Cozinha Animada</p>
-    <p class="small">Feito por Mariana Xarim e equipe - Projeto Final DSA1</p>
+    <p class="mb-1">© 2025 Sabor Toon</p>
+    <p class="small">Site desenvolvido para Atividade Final de DSA1</p>
+    <p class="small"> INF1FT</p>
+    <p class="small"> Mariana Barbosa, 26</p>
+    <p class="small"> Bryan Dias, 02</p>
+    <p class="small"> Yasmin Louzeiro, 37</p>
   </footer>
 
   <script>document.addEventListener('DOMContentLoaded', () => { console.log('Site Carregado'); })</script>
