Novas receitas adicionadas

--- a/receitas.html
+++ b/receitas.html
@@ -249,6 +249,86 @@
         </div>
       </div>
 
+      <div id="panquecas-tocinho-jake" class="card-receita my-4">
+        <img src="images/panquecas_toucinhojake.jpg" alt="Panquecas de Tocinho do Jake">
+        <div class="conteudo-card p-3">
+          <h3>🥓🥞 Panquecas de Tocinho do Jake (Hora de Aventura)</h3>
+          <p><strong>Origem:</strong> Desenho Hora de Aventura</p>
+          <p><strong>Ingredientes:</strong></p>
+          <ul>
+            <li>1 xícara de farinha de trigo</li>
+            <li>1 ovo</li>
+            <li>3/4 xícara de leite</li>
+            <li>1 colher de sopa de açúcar</li>
+            <li>1 colher de chá de fermento em pó</li>
+            <li>1 pitada de sal</li>
+            <li>2 fatias de bacon picadas</li>
+            <li>Manteiga para cozinhar</li>
+            <li>Maple syrup ou mel para servir</li>
+          </ul>
+          <p><strong>Modo de preparo:</strong></p>
+          <p>
+            Frite o bacon em uma frigideira até ficar crocante e reserve.
+            Misture a farinha, ovo, leite, açúcar, fermento e sal até formar uma massa homogênea.
+            Adicione pedaços do bacon crocante à massa.
+            Aqueça uma frigideira com manteiga e cozinhe pequenas porções de massa até dourar de ambos os lados.
+            Sirva quentes com maple syrup ou mel por cima.
+          </p>
+        </div>
+      </div>
+
+      <div id="ratatouille" class="card-receita my-4">
+        <img src="images/ratatouille.jpg" alt="Ratatouille">
+        <div class="conteudo-card p-3">
+          <h3>Ratatouille</h3>
+          <p><strong>Origem:</strong> Filme Ratatouille</p>
+          <p><strong>Ingredientes:</strong></p>
+          <ul>
+            <li>1 berinjela média</li>
+            <li>1 abobrinha média</li>
+            <li>1 pimentão vermelho</li>
+            <li>1 pimentão amarelo</li>
+            <li>2 tomates médios</li>
+            <li>2 colheres de sopa de azeite</li>
+            <li>Sal, pimenta e ervas finas a gosto</li>
+          </ul>
+          <p><strong>Modo de preparo:</strong></p>
+          <p>
+            Corte todos os legumes em fatias finas.
+            Em um refratário untado com azeite, organize os legumes alternando cores.
+            Tempere com sal, pimenta e ervas.
+            Regue com azeite e leve ao forno preaquecido a 180°C por 30-40 minutos até os legumes ficarem macios.
+            Sirva quente como prato principal ou acompanhamento.
+          </p>
+        </div>
+      </div>
+
+      <div id="dangos" class="card-receita my-4">
+        <img src="images/dangos.jpg" alt="Dangos Japoneses">
+        <div class="conteudo-card p-3">
+          <h3>Dangos Japoneses</h3>
+          <p><strong>Origem:</strong> Japão / Diversos animes</p>
+          <p><strong>Ingredientes:</strong></p>
+          <ul>
+            <li>1 xícara de farinha de arroz glutinoso</li>
+            <li>3 colheres de sopa de açúcar</li>
+            <li>1/3 xícara de água morna</li>
+            <li>Molho de soja doce ou anko (pasta de feijão vermelho) para cobertura</li>
+            <li>Palitos para montar</li>
+          </ul>
+          <p><strong>Modo de preparo:</strong></p>
+          <p>
+            Misture a farinha de arroz com o açúcar e vá adicionando a água aos poucos até formar uma massa maleável.
+            Modele pequenas bolinhas e cozinhe em água fervente até subirem à superfície (aprox. 2-3 minutos).
+            Escorra e deixe esfriar levemente.
+            Monte 3-4 bolinhas em palitos e cubra com o molho doce ou anko.
+            Sirva morno ou à temperatura ambiente.
+          </p>
+        </div>
+      </div>
+
+
+
 
       <div class="text-center mt-5">
         <a href="index.html" class="btn btn-outline-primary">Voltar ao Início</a>
