correção de erros

--- a/receitas.html
+++ b/receitas.html
@@ -7,359 +7,8 @@
   <title>Receitas - Sabor Toon</title>
   <link rel="icon" type="image/png" href="images/icone.png">
 
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap"
-    rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Sabor Toon</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navmenu">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-          <li class="nav-item"><a class="nav-link" href="#receitas">Receitas</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <header class="text-center py-5 bg-light">
-    <div class="container">
-      <h1 class="display-5 fw-bold">Receitas do Sabor Toon</h1>
-      <p class="lead">Sabores mágicos direto dos desenhos e animes!</p>
-      <a href="index.html" class="btn btn-success mt-3">Voltar à Página Inicial</a>
-    </div>
-  </header>
-
-  <section id="receitas" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-5">Nossas Receitas Especiais</h2>
-
-      <div id="ramen" class="card-receita my-4">
-        <img src="images/ramen_naruto.jpg" alt="Ramen do Naruto">
-        <div class="conteudo-card p-3">
-          <h3>🍜 Ramen do Naruto</h3>
-          <p><strong>Origem:</strong> Anime Naruto</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>500 ml de caldo de frango</li>
-            <li>1 pacote de macarrão para lámen</li>
-            <li>1 ovo cozido</li>
-            <li>1 fatia de carne de porco</li>
-            <li>Molho de soja e cebolinhas a gosto</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Ferva o caldo de frango, adicione o molho de soja e os temperos.
-            Cozinhe o macarrão, escorra e coloque no caldo.
-            Acrescente o ovo, a carne e finalize com cebolinha.
-          </p>
-        </div>
-      </div>
-
-      <div id="dorayaki" class="card-receita my-4">
-        <img src="images/dorayaki_doraemon.jpg" alt="Dorayaki do Doraemon">
-        <div class="conteudo-card p-3">
-          <h3>🍩 Dorayaki do Doraemon</h3>
-          <p><strong>Origem:</strong> Anime Doraemon</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>2 ovos</li>
-            <li>100g de açúcar</li>
-            <li>130g de farinha de trigo</li>
-            <li>1 colher de chá de fermento</li>
-            <li>Doce de feijão azuki (ou doce de leite) para o recheio</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Misture os ingredientes e asse pequenas panquecas douradas.
-            Recheie com o doce e feche como um sanduíche.
-          </p>
-        </div>
-      </div>
-
-      <div id="amendoim" class="card-receita my-4">
-        <img src="images/amendoim_ticoeteco.jpg" alt="Amendoim do Tico e Teco">
-        <div class="conteudo-card p-3">
-          <h3>🥜 Amendoim do Tico e Teco</h3>
-          <p><strong>Origem:</strong> Desenho Tico e Teco</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>2 xícaras de amendoim cru</li>
-            <li>1 xícara de açúcar</li>
-            <li>½ xícara de água</li>
-            <li>1 colher de sopa de chocolate em pó (opcional)</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Misture todos os ingredientes em uma panela e leve ao fogo médio.
-            Mexa até o açúcar cristalizar e o amendoim ficar crocante.
-          </p>
-        </div>
-      </div>
-
-      <div id="pancakes" class="card-receita my-4">
-        <img src="images/panquecas_pooh.jpg" alt="Panquecas do Pooh">
-        <div class="conteudo-card p-3">
-          <h3>🥞 Panquecas do Ursinho Pooh</h3>
-          <p><strong>Origem:</strong> Desenho Ursinho Pooh</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>1 xícara de farinha</li>
-            <li>1 colher de chá de fermento</li>
-            <li>1 ovo</li>
-            <li>1 colher de sopa de mel</li>
-            <li>1 xícara de leite</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Misture os ingredientes até formar uma massa homogênea.
-            Cozinhe pequenas porções em frigideira antiaderente e sirva com mel.
-          </p>
-        </div>
-      </div>
-
-      <div id="onigiri" class="card-receita my-4">
-        <img src="images/onigiri_anime.jpg" alt="Onigiri Japonês">
-        <div class="conteudo-card p-3">
-          <h3>🍙 Onigiri Japonês</h3>
-          <p><strong>Origem:</strong> Diversos animes</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>2 xícaras de arroz japonês</li>
-            <li>Sal a gosto</li>
-            <li>Recheio: atum com maionese ou salmão grelhado</li>
-            <li>Tiras de alga nori para envolver</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Molde o arroz em formato triangular, coloque o recheio no centro e envolva com alga.
-            Sirva fresco e levemente salgado.
-          </p>
-        </div>
-      </div>
-
-      <div id="biscoitos" class="card-receita my-4">
-        <img src="images/biscoitos_tomejerry.jpg" alt="Biscoitos da Vovó">
-        <div class="conteudo-card p-3">
-          <h3>🍪 Biscoitos da Vovó (Tom e Jerry)</h3>
-          <p><strong>Origem:</strong> Desenho Tom e Jerry</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>2 xícaras de farinha de trigo</li>
-            <li>1/2 xícara de açúcar</li>
-            <li>100g de manteiga</li>
-            <li>1 ovo</li>
-            <li>1 colher de chá de essência de baunilha</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Misture todos os ingredientes até formar uma massa homogênea.
-            Abra com um rolo, corte com moldes e asse por 15 minutos a 180°C.
-          </p>
-        </div>
-      </div>
-
-      <div id="hamburguer" class="card-receita my-4">
-        <img src="images/hamburguer_bobesponja.jpg" alt="Hambúrguer de Siri">
-        <div class="conteudo-card p-3">
-          <h3>🍔 Hambúrguer de Siri (Bob Esponja)</h3>
-          <p><strong>Origem:</strong> Desenho Bob Esponja</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>2 pães de hambúrguer</li>
-            <li>2 hambúrgueres de carne ou vegetal</li>
-            <li>Queijo, alface, tomate e picles</li>
-            <li>Molho especial e maionese</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Monte o lanche intercalando os ingredientes.
-            Sirva quente, como no Siri Cascudo!
-          </p>
-        </div>
-      </div>
-
-      <div id="pizza" class="card-receita my-4">
-        <img src="images/pizza_tartarugasninja.jpg" alt="Pizza das Tartarugas Ninja">
-        <div class="conteudo-card p-3">
-          <h3>🍕 Pizza das Tartarugas Ninja</h3>
-          <p><strong>Origem:</strong> Desenho As Tartarugas Ninja</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>1 massa de pizza pronta</li>
-            <li>Molho de tomate</li>
-            <li>Queijo mussarela</li>
-            <li>Calabresa, azeitona e orégano</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Espalhe o molho na massa, adicione os ingredientes e asse por 20 minutos a 200°C.
-            Perfeita para comer com os amigos!
-          </p>
-        </div>
-      </div>
-
-      <div id="espaguete" class="card-receita my-4">
-        <img src="images/espaguete_damaevagabundo.jpg" alt="Espaguete da Dama e o Vagabundo">
-        <div class="conteudo-card p-3">
-          <h3>🍝 Espaguete da Dama e o Vagabundo</h3>
-          <p><strong>Origem:</strong> Filme A Dama e o Vagabundo</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>200g de espaguete</li>
-            <li>1 lata de molho de tomate</li>
-            <li>Almôndegas prontas</li>
-            <li>Queijo ralado e manjericão</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Cozinhe o macarrão e misture ao molho com as almôndegas.
-            Finalize com queijo ralado e manjericão.
-            Um prato perfeito para dividir com quem você ama ❤️
-          </p>
-        </div>
-      </div>
-
-      <div id="cookie" class="card-receita my-4">
-        <img src="images/cookie_vanellope.jpg" alt="Cookie da Vanellope">
-        <div class="conteudo-card p-3">
-          <h3>🍪 Cookie da Vanellope (Detona Ralph)</h3>
-          <p><strong>Origem:</strong> Filme Detona Ralph</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>1 xícara de manteiga</li>
-            <li>1 xícara de açúcar mascavo</li>
-            <li>2 xícaras de farinha de trigo</li>
-            <li>1 ovo e 1 colher de essência de baunilha</li>
-            <li>Chocolate granulado colorido</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Misture tudo, molde os cookies e asse por 15 minutos a 180°C.
-            Ficam crocantes por fora e macios por dentro!
-          </p>
-        </div>
-      </div>
-
-      <div id="panquecas-tocinho-jake" class="card-receita my-4">
-        <img src="images/panquecas_toucinhojake.jpg" alt="Panquecas de Tocinho do Jake">
-        <div class="conteudo-card p-3">
-          <h3>🥓🥞 Panquecas de Tocinho do Jake (Hora de Aventura)</h3>
-          <p><strong>Origem:</strong> Desenho Hora de Aventura</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>1 xícara de farinha de trigo</li>
-            <li>1 ovo</li>
-            <li>3/4 xícara de leite</li>
-            <li>1 colher de sopa de açúcar</li>
-            <li>1 colher de chá de fermento em pó</li>
-            <li>1 pitada de sal</li>
-            <li>2 fatias de bacon picadas</li>
-            <li>Manteiga para cozinhar</li>
-            <li>Maple syrup ou mel para servir</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Frite o bacon em uma frigideira até ficar crocante e reserve.
-            Misture a farinha, ovo, leite, açúcar, fermento e sal até formar uma massa homogênea.
-            Adicione pedaços do bacon crocante à massa.
-            Aqueça uma frigideira com manteiga e cozinhe pequenas porções de massa até dourar de ambos os lados.
-            Sirva quentes com maple syrup ou mel por cima.
-          </p>
-        </div>
-      </div>
-
-      <div id="ratatouille" class="card-receita my-4">
-        <img src="images/ratatouille.jpg" alt="Ratatouille">
-        <div class="conteudo-card p-3">
-          <h3>Ratatouille</h3>
-          <p><strong>Origem:</strong> Filme Ratatouille</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>1 berinjela média</li>
-            <li>1 abobrinha média</li>
-            <li>1 pimentão vermelho</li>
-            <li>1 pimentão amarelo</li>
-            <li>2 tomates médios</li>
-            <li>2 colheres de sopa de azeite</li>
-            <li>Sal, pimenta e ervas finas a gosto</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Corte todos os legumes em fatias finas.
-            Em um refratário untado com azeite, organize os legumes alternando cores.
-            Tempere com sal, pimenta e ervas.
-            Regue com azeite e leve ao forno preaquecido a 180°C por 30-40 minutos até os legumes ficarem macios.
-            Sirva quente como prato principal ou acompanhamento.
-          </p>
-        </div>
-      </div>
-
-      <div id="dangos" class="card-receita my-4">
-        <img src="images/dangos.jpg" alt="Dangos Japoneses">
-        <div class="conteudo-card p-3">
-          <h3>Dangos Japoneses</h3>
-          <p><strong>Origem:</strong> Japão / Diversos animes</p>
-          <p><strong>Ingredientes:</strong></p>
-          <ul>
-            <li>1 xícara de farinha de arroz glutinoso</li>
-            <li>3 colheres de sopa de açúcar</li>
-            <li>1/3 xícara de água morna</li>
-            <li>Molho de soja doce ou anko (pasta de feijão vermelho) para cobertura</li>
-            <li>Palitos para montar</li>
-          </ul>
-          <p><strong>Modo de preparo:</strong></p>
-          <p>
-            Misture a farinha de arroz com o açúcar e vá adicionando a água aos poucos até formar uma massa maleável.
-            Modele pequenas bolinhas e cozinhe em água fervente até subirem à superfície (aprox. 2-3 minutos).
-            Escorra e deixe esfriar levemente.
-            Monte 3-4 bolinhas em palitos e cubra com o molho doce ou anko.
-            Sirva morno ou à temperatura ambiente.
-          </p>
-        </div>
-      </div>
-
-
-
-
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary">Voltar ao Início</a>
-      </div>
-    </div>
-  </section>
-
-  <footer class="py-4 text-white text-center">
-    <p class="mb-1">© 2025 Sabor Toon</p>
-    <p class="small">Site desenvolvido para Atividade Final de DSA1</p>
-    <p class="small"> INF1FT</p>
-    <p class="small"> Mariana Barbosa, 26</p>
-    <p class="small"> Bryan Dias, 02</p>
-    <p class="small"> Yasmin Louzeiro, 37</p>
-  </footer>
-
-  <script>document.addEventListener('DOMContentLoaded', () => { console.log('Site Carregado'); })</script>
-</body>
-
-</html>
-<!doctype html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Receitas - Sabor Toon</title>
-  <link rel="icon" type="image/png" href="images/icone.png">
-
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&di…
+    rel=" stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
