--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sabor Toon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@400;600;700&display=swap"
+    rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
@@ -42,7 +45,8 @@
     <div class="container">
       <h2>Sobre o Projeto</h2>
       <p class="fs-5">
-        Inspirado nas comidas mais icônicas dos desenhos e animes, o Cozinha Animada traz um pedacinho do mundo da fantasia para a sua mesa.
+        Inspirado nas comidas mais icônicas dos desenhos e animes, o Cozinha Animada traz um pedacinho do mundo da
+        fantasia para a sua mesa.
         Cada receita é uma homenagem ao sabor e à imaginação.
       </p>
     </div>
@@ -107,17 +111,32 @@
             </div>
           </div>
         </div>
+
+        <div class="col-md-4">
+          <div class="card-receita">
+            <img src="images/beignets_tiana.jpg" alt="Beignets Tiana">
+            <div class="conteudo-card">
+              <h3>Beignets da Tiana</h3>
+              <p>Docinhos fritos e cobertos com açúcar de confeiteiro, direto da cozinha de Nova Orleans!</p>
+              <a href="receitas.html#beignets-tiana" class="btn btn-success mt-2">Ver Receita</a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
+
 
   <section id="galeria" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">Galeria</h2>
       <div class="row g-4">
         <div class="col-md-4"><img src="images/ramen_naruto.jpg" class="img-fluid rounded shadow-sm" alt="Ramen"></div>
-        <div class="col-md-4"><img src="images/dorayaki_doraemon.jpg" class="img-fluid rounded shadow-sm" alt="Dorayaki"></div>
-        <div class="col-md-4"><img src="images/amendoim_ticoeteco.jpg" class="img-fluid rounded shadow-sm" alt="Amendoim"></div>
+        <div class="col-md-4"><img src="images/dorayaki_doraemon.jpg" class="img-fluid rounded shadow-sm"
+            alt="Dorayaki"></div>
+        <div class="col-md-4"><img src="images/amendoim_ticoeteco.jpg" class="img-fluid rounded shadow-sm"
+            alt="Amendoim"></div>
       </div>
     </div>
   </section>
@@ -131,6 +150,7 @@
     <p class="small"> Yasmin Louzeiro, 37</p>
   </footer>
 
-  <script>document.addEventListener('DOMContentLoaded',()=>{console.log('Site Carregado');})</script>
+  <script>document.addEventListener('DOMContentLoaded', () => { console.log('Site Carregado'); })</script>
 </body>
+
 </html>
