--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/icone.png" type="image/png">
+
 </head>
 
 <body>
